--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,27 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3F3F3">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#F3F3F3"
+    android:id="@+id/layout"
+    android:orientation="vertical">
+
+
+    <TextView
+        android:id="@+id/titleofscreen"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:fontFamily="@font/montserrat"
+        android:paddingTop="10dp"
+        android:text="Generate Report"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textColor="#000000"
+        android:textSize="25dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="20dp">
+
     <TextView
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="37dp"
-        android:layout_marginTop="100dp"
         android:fontFamily="@font/montserrat"
         android:text="Duration:"
         android:textColor="#515C6F"
         android:textSize="20sp" />
+
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/radio_group"
-        android:layout_below="@+id/text1"
         android:checkedButton="@id/radioButton1"
         tools:ignore="UnknownId">
 
@@ -31,15 +49,10 @@
                 android:layout_width="362dp"
                 android:layout_height="54dp"
                 android:text="Last Two Weeks"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="20dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
+                android:layout_margin="5dp"
                 android:background="@drawable/white_background"
                 android:focusable="auto"
                 />
-
 
 
             <RadioButton
@@ -47,14 +60,9 @@
                 android:layout_width="362dp"
                 android:layout_height="54dp"
                 android:text="Last Month"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="20dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
+                android:layout_margin="5dp"
                 android:background="@drawable/white_background"
                 android:focusable="auto"/>
-
 
 
             <RadioButton
@@ -62,111 +70,90 @@
                 android:layout_width="362dp"
                 android:layout_height="54dp"
                 android:text="Specific period"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="20dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
+                android:layout_margin="5dp"
                 android:background="@drawable/white_background"
                 android:focusable="auto" />
-
-
 
 
     </RadioGroup>
 
 
-    <TextView
-        android:id="@+id/titleofscreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Generate Report"
-        android:textColor="#000000"
-        android:textSize="30sp" />
-
     <LinearLayout
         android:id="@+id/data_picker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/radio_group"
-        android:layout_marginStart="30dp"
+        android:orientation="horizontal"
+        android:padding="10dp"
         tools:ignore="UnknownId">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Start"
-                android:layout_alignParentLeft="true"
-                ></TextView>
+                />
 
             <TextView
                 android:id="@+id/start_date"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DD/MM/YYYY"
-                android:layout_alignParentRight="true"
-                ></TextView>
+                android:text="DD/MM/YYYY" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/start"
-                android:text="start"/>
+                android:text="Start"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="end"
-                android:layout_alignParentLeft="true"
-                ></TextView>
+                android:text="End"
+                />
 
             <TextView
                 android:id="@+id/end_date"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DD/MM/YYYY"
-                android:layout_alignParentRight="true"
-                ></TextView>
+                android:text="DD/MM/YYYY" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/end"
-                android:text="end">
+                android:text="End">
             </Button>
 
         </LinearLayout>
     </LinearLayout>
 
+    </LinearLayout>
+
     <Button
         android:id="@+id/generate_report_btn"
-        android:layout_width="204dp"
-        android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="92dp"
-        android:layout_below="@id/data_picker"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
         android:background="#4CA1D3"
-        android:ellipsize="none"
-        android:text="Generate report"
+        android:layout_gravity="center"
+
+        android:text="Generate Report"
         android:textColor="#FFFFFF"
         tools:ignore="InvalidId" />
 
 
-</RelativeLayout>
+</LinearLayout>
