--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
     <color name="colorPrimary">#5ECCF0</color>
     <color name="colorPrimaryDark">#9C000000</color>
     <color name="colorAccent">#4CA1D3</color>
+    <color name="Grey">#B1B0B0</color>
+    <color name="Error">#A02323</color>
+
 </resources>
