[FIX] : Layout improvements

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,13 +19,14 @@
 
     <fragment
         android:id="@+id/navigation_drafts"
-        android:name="com.ksu.serene.Controller.Homepage.Drafts.draftsFragment"
+        android:name="com.ksu.serene.Controller.Homepage.Drafts.DraftsFragment"
         android:label="Drafts"
         tools:layout="@layout/fragment_drafts" />
 
     <fragment
         android:id="@+id/navigation_calendar"
-        android:name="com.ksu.serene.Controller.Homepage.Calendar.calendarFragment"
+        android:name="com.ksu.serene.Controller.Homepage.Calendar.CalendarFragment"
         android:label="Calendar"
         tools:layout="@layout/fragment_calendar" />
+
 </navigation>
