--- a/app/src/main/res/layout/fragment_drafts.xml
+++ b/app/src/main/res/layout/fragment_drafts.xml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3F3F3"
+    android:background="@drawable/layout_rounded_bg"
+    android:id="@+id/layout"
+    android:orientation="vertical"
     >
-
-
 
 
     <TextView
         android:id="@+id/titleofscreen"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="60dp"
+        android:layout_height="50dp"
         android:fontFamily="@font/montserrat"
+        android:paddingTop="10dp"
         android:text="Drafts"
-        android:textColor="#000000"
-        android:textSize="30sp" />
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:textSize="25sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="20dp">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/TabLayoutDraft"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/titleofscreen"
         />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/ViewPagerDraft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/TabLayoutDraft"/>
+        />
+
+    </LinearLayout>
 
 
 
 
-</RelativeLayout>
+</LinearLayout>
