--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#F3F3F3"
+    android:background="@drawable/layout_rounded_bg"
     android:id="@+id/layout"
     android:orientation="vertical">
 
@@ -18,12 +18,13 @@
         android:text="Generate Report"
         android:gravity="center"
         android:layout_gravity="center"
-        android:textColor="#000000"
-        android:textSize="25dp" />
+        android:textColor="@color/black"
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
         android:padding="20dp">
 
@@ -34,6 +35,7 @@
         android:fontFamily="@font/montserrat"
         android:text="Duration:"
         android:textColor="#515C6F"
+        android:layout_marginBottom="10dp"
         android:textSize="20sp" />
 
     <RadioGroup
@@ -48,8 +50,10 @@
                 android:id="@+id/radioButton1"
                 android:layout_width="362dp"
                 android:layout_height="54dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Last Two Weeks"
                 android:layout_margin="5dp"
+                android:textSize="15sp"
                 android:background="@drawable/white_background"
                 android:focusable="auto"
                 />
@@ -59,8 +63,10 @@
                 android:id="@+id/radioButton2"
                 android:layout_width="362dp"
                 android:layout_height="54dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Last Month"
                 android:layout_margin="5dp"
+                android:textSize="15sp"
                 android:background="@drawable/white_background"
                 android:focusable="auto"/>
 
@@ -69,7 +75,9 @@
                 android:id="@+id/radioButton3"
                 android:layout_width="362dp"
                 android:layout_height="54dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Specific period"
+                android:textSize="15sp"
                 android:layout_margin="5dp"
                 android:background="@drawable/white_background"
                 android:focusable="auto" />
